--- a/src/tabs/tab-item.component.html
+++ b/src/tabs/tab-item.component.html
@@ -3,7 +3,7 @@
             <igx-icon fontSet="material" [name]="relatedGroup.icon"></igx-icon>
             <igx-badge [value]="changesCount" [hidden]="changesCount === 0"></igx-badge>
         </div>
-        <div *ngIf="relatedGroup.label" ngClass="tab-item-label">{{relatedGroup.label}}</div>
+        <div *ngIf="relatedGroup.label" ngClass="igx-tabs__item-label">{{relatedGroup.label}}</div>
 
 </ng-template>
 <ng-container *ngTemplateOutlet="relatedGroup.customTabTemplate ? relatedGroup.customTabTemplate : defaultTabTemplate; context: { $implicit: relatedGroup }">
