refactor(igx-grid): get_row - 2 methods (by_key & by_index). Add tests. #805

--- a/demos/app/grid/sample.component.html
+++ b/demos/app/grid/sample.component.html
@@ -161,7 +161,7 @@
                     </ng-template>
                 </igx-column>
             </igx-grid>
-            
+            <button (click)="updateRow11()">Update Row With primaryKey</button>
         </article>
         
     </section>
