--- a/src/core/styles/components/tabs/_tabs-theme.scss
+++ b/src/core/styles/components/tabs/_tabs-theme.scss
@@ -65,6 +65,11 @@
     $label-font-size: rem(12px, 16px);
     $label-line-height: rem(12px, 16px);
 
+    %igx-tabs {
+        display: flex;
+        flex-direction: column;
+    }
+
     // HEADER
     %igx-tabs__header {
         display: flex;
@@ -74,17 +79,18 @@
     }
 
     // ITEM WRAPPER
-    %igx-tabs__wrapper {
+    %igx-tabs__wrapper-fixed {
         flex: 1 1 auto;
         overflow: hidden;
     }
 
     // ITEM HOLDER (The element that scrolls)
-    %igx-tabs__items-holder {
+    %igx-tabs__wrapper-fluid {
         display: inline-flex;
         align-items: center;
         position: relative;
         flex-wrap: nowrap;
+        transition: transform .5s cubic-bezier(.35, 0, .25, 1);
     }
 
     // MENU ITEM
@@ -96,11 +102,9 @@
         min-width: $item-min-width;
         max-width: $item-max-width;
         height: $tabs-height;
-
         // Flex basis & shrink are Needed for IE11
         flex-basis: auto;
         flex-shrink: 0;
-
         color: map-get($this, 'text-color');
         padding: $item-padding;
         overflow: hidden;
@@ -173,23 +177,27 @@
         text-align: center;
     }
 
-    %igx-tabs__content {
-        display: flex;
-        overflow-x: hidden;
+    %igx-tabs__content-fixed {
+        flex: 1 1 auto;
+        overflow: hidden;
+    }
+
+    %igx-tabs__content-fluid {
+        display: inline-flex;
+        align-items: center;
+        position: relative;
+        flex-wrap: nowrap;
     }
 
     %igx-tabs__group {
-        visibility: hidden;
+        display: inline-flex;
         min-width: 100%;
-        transform: translateX(-100%);
-
-        position: absolute;
+        transition: transform .5s cubic-bezier(.35, 0, .25, 1);
     }
 
     %igx-tabs__group--selected {
-        visibility: visible;
+        display: inline-flex;
         min-width: 100%;
-        transform: translateX(0);
         transition: transform .5s cubic-bezier(.35, 0, .25, 1);
     }
 }
