--- a/src/core/styles/themes/_index.scss
+++ b/src/core/styles/themes/_index.scss
@@ -33,7 +33,7 @@
 @import '../components/navbar/navbar-theme';
 @import '../components/navdrawer/navdrawer-theme';
 @import '../components/list/list-theme';
-@import '../components/input/input-theme';
+@import '../components/input/input-group-theme';
 @import '../components/icon/icon-theme';
 @import '../components/time-picker/time-picker-theme';
 
@@ -59,7 +59,7 @@
 /// @requires {mixin} igx-grid-summary
 /// @requires {mixin} igx-grid-paginator
 /// @requires {mixin} igx-icon
-/// @requires {mixin} igx-input
+/// @requires {mixin} igx-input-group
 /// @requires {mixin} igx-list
 /// @requires {mixin} igx-navbar
 /// @requires {mixin} igx-navdrawer
@@ -130,8 +130,8 @@
     @if not(index($exclude, 'igx-icon')) {
         @include igx-icon($theme: (), $palette: $palette);
     }
-    @if not(index($exclude, 'igx-form-group')) {
-        @include igx-input($theme: (), $palette: $palette);
+    @if not(index($exclude, 'igx-input-group')) {
+        @include igx-input-group($theme: (), $palette: $palette);
     }
     @if not(index($exclude, 'igx-list')) {
         @include igx-list($theme: (), $palette: $palette);
