--- a/src/core/styles/components/tabs/_tabs-component.scss
+++ b/src/core/styles/components/tabs/_tabs-component.scss
@@ -15,42 +15,42 @@
         @extend %igx-tabs__header !optional;
     }
 
-    @include e(wrapper-fixed) {
-        @extend %igx-tabs__wrapper-fixed !optional;
+    @include e(header-wrapper-fixed) {
+        @extend %igx-tabs__header-wrapper-fixed !optional;
     }
 
-    @include e(wrapper-fluid) {
-        @extend %igx-tabs__wrapper-fluid !optional;
+    @include e(header-wrapper-fluid) {
+        @extend %igx-tabs__header-wrapper-fluid !optional;
     }
 
-    @include e(menu-item-indicator) {
-        @extend %igx-tabs__menu-item-indicator !optional;
+    @include e(header-menu-item-indicator) {
+        @extend %igx-tabs__header-menu-item-indicator !optional;
     }
 
     @include e(item-label) {
         @extend %igx-tabs__item-label !optional;
     }
 
-    @include e(scroller-button) {
-        @extend %igx-tabs__scroller-button !optional;
+    @include e(header-button) {
+        @extend %igx-tabs__header-button !optional;
     }
 
-    @include e(scroller-button, $m: active) {
-        @extend %igx-tabs__scroller-button !optional;
+    @include e(header-button, $m: active) {
+        @extend %igx-tabs__header-button !optional;
     }
 
-    @include e(menu-item) {
-        @extend %igx-tabs__menu-item !optional;
+    @include e(header-menu-item) {
+        @extend %igx-tabs__header-menu-item !optional;
     }
 
-    @include e(menu-item, $m: selected) {
-        @extend %igx-tabs__menu-item !optional;
-        @extend %igx-tabs__menu-item--selected !optional;
+    @include e(header-menu-item, $m: selected) {
+        @extend %igx-tabs__header-menu-item !optional;
+        @extend %igx-tabs__header-menu-item--selected !optional;
     }
 
-    @include e(menu-item, $m: disabled) {
-        @extend %igx-tabs__menu-item !optional;
-        @extend %igx-tabs__menu-item--disabled !optional;
+    @include e(header-menu-item, $m: disabled) {
+        @extend %igx-tabs__header-menu-item !optional;
+        @extend %igx-tabs__header-menu-item--disabled !optional;
     }
 
     @include e(content-fixed) {
@@ -70,3 +70,4 @@
         @extend %igx-tabs__group--selected !optional;
     }
 }
+
