--- a/src/tabs/tabs.component.html
+++ b/src/tabs/tabs.component.html
@@ -2,22 +2,22 @@
 <!-- TODO Remove tab container from here -->
 <div #tabsContainer>
     <div class="igx-tabs__header" #headerContainer>
-        <button igxRipple class="igx-tabs__scroller-button igx-tabs__scroller__indicator--left" igxButton="icon" (click)="scrollLeft($event)">
+        <button igxRipple class="igx-tabs__header-button" igxButton="icon" (click)="scrollLeft($event)">
             <igx-icon fontSet="material" name="navigate_before"></igx-icon>
         </button>
-        <div class="igx-tabs__wrapper-fixed" #viewPort>
-            <div #itemsContainer class="igx-tabs__wrapper-fluid">
+        <div class="igx-tabs__header-wrapper-fixed" #viewPort>
+            <div #itemsContainer class="igx-tabs__header-wrapper-fluid">
                 <igx-tab-item igxRipple *ngFor="let group of groups" [id]="'igx-tab-item-' + group.index" [attr.aria-label]="group.label" [attr.aria-disabled]="group.isDisabled"
                                              [attr.aria-selected]="group.isSelected" [attr.aria-controls]="'igx-tab-item-group-'+ group.index" [ngClass]="{
-                'igx-tabs__menu-item': !group.isSelected && !group.isDisabled,
-                'igx-tabs__menu-item--selected': group.isSelected,
-                'igx-tabs__menu-item--disabled': group.isDisabled }"
+                'igx-tabs__header-menu-item': !group.isSelected && !group.isDisabled,
+                'igx-tabs__header-menu-item--selected': group.isSelected,
+                'igx-tabs__header-menu-item--disabled': group.isDisabled }"
                                              [relatedGroup]="group" (click)="group.select()" role="tab" >
                 </igx-tab-item>
-                <div #selectedIndicator class="igx-tabs__menu-item-indicator"></div>
+                <div #selectedIndicator class="igx-tabs__header-menu-item-indicator"></div>
             </div>
         </div>
-        <button igxRipple class="igx-tabs__scroller-button igx-tabs__scroller__indicator--right" igxButton="icon" (click)="scrollRight($event)">
+        <button igxRipple class="igx-tabs__header-button" igxButton="icon" (click)="scrollRight($event)">
             <igx-icon fontSet="material" name="navigate_next"></igx-icon>
         </button>
     </div>
