feat(grid): deferred column resizing - demos update #797

--- a/demos/app/avatar/sample.component.html
+++ b/demos/app/avatar/sample.component.html
@@ -8,11 +8,11 @@
             <h4 class="sample-title">Circular Avatars</h4>
             <article class="avatars-wrapper">
                 <div class="avatar-sample">
-                    <igx-avatar [roundShape]="'true'" icon="tag_faces" color="#424242"></igx-avatar>
+                    <igx-avatar igxDrag [roundShape]="'true'" icon="tag_faces" color="#424242"></igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
-                    <igx-avatar [roundShape]="'true'" icon="tag_faces" color="#424242" size="medium"></igx-avatar>
+                    <igx-avatar igxDrag [roundShape]="'true'" icon="tag_faces" color="#424242" size="medium"></igx-avatar>
                 </div>
 
                 <div class="avatar-sample">
