--- a/demos/app/grid-performance/sample.component.html
+++ b/demos/app/grid-performance/sample.component.html
@@ -1,5 +1,5 @@
 <div class="sample-wrapper dark-grid">
-    <igx-grid #grid1 [data]="localData" (onCellSelection)="selectCell($event)" [width]="'800px'" [height]="'600px'">
+    <igx-grid #grid1 [data]="localData" (onCellSelection)="selectCell($event)" [width]="'800px'" [height]="'600px'" rowSelectable="true">
         <igx-column *ngFor="let c of columns" [sortable]="true" [filterable]="true" [field]="c.field" [header]="c.field" [width]="c.width">
         </igx-column>
     </igx-grid>
