fix(igxGrid): recover inappropriately deleted code; fix problems after merge of primaryKey feature #812

--- a/src/grid/grid.component.html
+++ b/src/grid/grid.component.html
@@ -22,7 +22,7 @@
 <div class="igx-grid__thead" role="rowgroup" [style.width.px]='calcWidth' #theadRow>
     <div class="igx-grid__tr" role="row" style="width: calc(100% - 18px)">
         <ng-container *ngIf="rowSelectable">
-            <igx-checkbox [checked]="allRowsSelected" (change)="onHeaderCheckboxClick($event)" disableRipple="true"></igx-checkbox>
+            <igx-checkbox [checked]="allRowsSelected" (change)="onHeaderCheckboxClick($event)" disableRipple="true" #headerCheckbox></igx-checkbox>
         </ng-container>
         <ng-container *ngIf="pinnedColumns.length > 0">
             <igx-grid-header [gridID]="id" *ngFor="let col of pinnedColumns" [column]="col" [style.min-width.px]="col.width"></igx-grid-header>
