improve sass theming and change colors

--- a/demos/app/tabs/sample.component.html
+++ b/demos/app/tabs/sample.component.html
@@ -1,6 +1,6 @@
 <div class="sample-wrapper">
     <page-header title="Tabs" description="Allows the user to navigate between different content displayed in one view. The tabs are placed at the top and allows scrolling."></page-header>
-    <div class="sample-content">
+    <div class="item-wrapp">
         <!-- <article class="sample-column">
             <h4 class="sample-title">Three item tabbar</h4>
             <div class="tabbar-wrapper" #tabbarEl > -->
@@ -57,14 +57,18 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius sapien ligula. Donec
                                 consectetur accumsan suscipit. Praesent rutrum tellus blandit bibendum cursus. Vestibulum
                                 urna arcu, bibendum nec molestie ac, varius congue massa. Mauris porttitor viverra lacus.
+                                </p>
+                            <h4>Tab 1 Content</h4>
+                            <p>
                                 Donec efficitur purus id urna dapibus, vitae pharetra orci pellentesque. Vestibulum id lacus
                                 a magna euismod volutpat id in mi. Etiam a nunc ut tellus dictum porta. Donec in ligula a
                                 arcu sollicitudin finibus. Vivamus id lorem pulvinar, accumsan justo vitae, vehicula diam.
-                                Mauris vel quam at velit venenatis vulputate in quis nisl.</p>
+                                Mauris vel quam at velit venenatis vulputate in quis nisl.
+                            </p>
                         </div>
                     </igx-tabs-group>
                     <igx-tabs-group label="Tab2 Tab2 Tab2">
-                        <div igxRipple="yellow" class="tab-content">
+                        <div class="tab-content">
                             <h3>Tab 2 Content</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vitae malesuada odio. Praesent
                                 ante lectus, porta a eleifend vel, sodales eu nisl. Vivamus sit amet purus eu lectus cursus
